// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/team-icon basic icon 1`] = `
<div
  className="TeamIcon TeamIcon__sm no-hover"
>
  <div
    className="TeamIcon__content no-hover"
  >
    <div
      aria-label="test Team Initials"
      className="TeamIcon__initials TeamIcon__initials__sm"
      data-testid="teamIconInitial"
      role="img"
    >
      te
    </div>
  </div>
</div>
`;

exports[`components/widgets/team-icon icon with hover 1`] = `
<div
  className="TeamIcon TeamIcon__sm"
>
  <div
    className="TeamIcon__content "
  >
    <div
      aria-label="test Team Initials"
      className="TeamIcon__initials TeamIcon__initials__sm"
      data-testid="teamIconInitial"
      role="img"
    >
      te
    </div>
  </div>
</div>
`;

exports[`components/widgets/team-icon image icon 1`] = `
<div
  className="TeamIcon TeamIcon__sm withImage no-hover"
>
  <div
    className="TeamIcon__content no-hover"
  >
    <div
      aria-label="test Team Image"
      className="TeamIcon__image TeamIcon__sm"
      data-testid="teamIconImage"
      role="img"
      style={
        Object {
          "backgroundImage": "url('http://example.com/image.png')",
        }
      }
    />
  </div>
</div>
`;

exports[`components/widgets/team-icon small icon 1`] = `
<div
  className="TeamIcon TeamIcon__sm no-hover"
>
  <div
    className="TeamIcon__content no-hover"
  >
    <div
      aria-label="test Team Initials"
      className="TeamIcon__initials TeamIcon__initials__sm"
      data-testid="teamIconInitial"
      role="img"
    >
      te
    </div>
  </div>
</div>
`;
